k8s/nginx-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  namespace: nginx
spec:
  host: nginx.karan.mahity.local
  to:
    kind: Service
    name: nginx-service
  port:
    targetPort: 80
